--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "farmers" "\0"
+            VALUE "FileDescription", "sendgo" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "farmers" "\0"
+            VALUE "InternalName", "sendgo" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "farmers.exe" "\0"
-            VALUE "ProductName", "farmers" "\0"
+            VALUE "OriginalFilename", "sendgo.exe" "\0"
+            VALUE "ProductName", "sendgo" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
