--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
 
   image_picker: ^0.8.7+4
 
+  camera: ^0.10.0
+  tflite_flutter: ^0.9.5
+  tflite_flutter_helper: ^0.2.0
+  image: ^3.0.1
   intl: ^0.18.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -65,7 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-
+    - assets/model.tflite
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
